# logzzz

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docker/: start-downloader.sh  start-logzz.sh
downloader/: Cargo.toml
downloader/.local/archives/: 0000002707-archiveb.zip.logzz-upload.json  0000002782-archiveb.zip.logzz-upload.json  0000002783-archiveb.zip.logzz-upload.json  0000002784-archiveb.zip.logzz-upload.json  0000002785-archiveb.zip.logzz-upload.json  0000002786-archiveb.zip.logzz-upload.json  0000002787-archiveb.zip.logzz-upload.json  0000002788-archiveb.zip.logzz-upload.json  0000002789-archiveb.zip.logzz-upload.json
downloader/.local/downloader/: downloader-POCTOB4AH1H.state.json  downloader.session
downloader/src/: main.rs
logzz/: Cargo.toml
logzz/src/: archive.rs  config.rs  lib.rs  main.rs  migrate.rs  parser.rs  records.rs  telegram.rs
logzz/src/bot/: archive.rs  handlers.rs  html.rs  mod.rs  query.rs  state.rs  types.rs
logzz/src/importer/: db.rs  files.rs  mod.rs  runner.rs
migrations/: 001_init.sql
