[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
grammers-client = "0.9"
grammers-session = "0.9"
mime = "0.3"
mime_guess = "2"
grammers-mtsender = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
logzz = { path = "../logzz" }
clap = { version = "4", features = ["derive"] }
axum = "0.8"
